Only Added name to exec if it doesn't already exist Updated specs (from puppet resolver to chef default resolver) INCOMPLETE push

--- a/TODO.textile
+++ b/TODO.textile
@@ -4,3 +4,4 @@
 # Reduce dependencies
 # task for "rake clean_pkg && rake gemspec && rake build && rm -rf /tmp/poolparty/ && rm -rf vendor/dependencies/"
 # Add Ohai plugin to expose poolparty data
+# Change all the copying to /tmp/poolparty statements to be handled with zipper
