Handling line_in_resource in chef_resolver slightly differently. TODO: Change to be a plugin, rather than a native resource Echoed into PROGRESS file Moved path to be an array in exec Updated line to be quoted properly Fixed deps_resolver specs

--- a/TODO.textile
+++ b/TODO.textile
@@ -5,3 +5,4 @@
 # task for "rake clean_pkg && rake gemspec && rake build && rm -rf /tmp/poolparty/ && rm -rf vendor/dependencies/"
 # Add Ohai plugin to expose poolparty data
 # Change all the copying to /tmp/poolparty statements to be handled with zipper
+# Change line in file from a native resource to be a plugin (like git)
