Updated example runs Changed Fixnums to resolve to .to_i

--- a/TODO.textile
+++ b/TODO.textile
@@ -6,3 +6,4 @@
 # Add Ohai plugin to expose poolparty data
 # Change all the copying to /tmp/poolparty statements to be handled with zipper
 # Change line in file from a native resource to be a plugin (like git)
+# Add puppet/chef syntax checker
