Added TODO to reorder resources to retain order (started ordered_resources branch) Added context cloud on Dependency resolver Added default data to server_monitor Fixed typo in chef plugin Fixed after_bootstrap typo where after_bootstrap is now defined in the class

--- a/TODO.textile
+++ b/TODO.textile
@@ -1,3 +1,4 @@
+# REORDER RESOURCES TO RETAIN ORDER
 # Remove Monitors from cloud.rb
 # Remove Ruby2Ruby dependency
 # Move server binaries to use props_hash
