Update Rake file with rdoc task, and use hanaa template Remove rubny2ruby from gem dependencies

--- a/TODO.textile
+++ b/TODO.textile
@@ -1,13 +1,16 @@
-# REORDER RESOURCES TO RETAIN ORDER
-# Remove Monitors from cloud.rb
-# Remove Ruby2Ruby dependency
 # Move server binaries to use props_hash
 # Reduce dependencies
 # task for "rake clean_pkg && rake gemspec && rake build && rm -rf /tmp/poolparty/ && rm -rf vendor/dependencies/"
 # Add Ohai plugin to expose poolparty data
-# Change all the copying to /tmp/poolparty statements to be handled with zipper
-# Change line in file from a native resource to be a plugin (like git)
 # Add puppet/chef syntax checker
-# Place suitcase and dependencie files in ~/.poolparty/tmp-poolname/ instead of /tmp/
-# Remove vendor/dependencies from the gemspec... grrr
+# Place suitcase and dependencies files in ~/.poolparty/tmp-poolname/ instead of /tmp/
 # XMPP
+
+
+
+== TODO:
+* Add hot reload to haproxy while reconfiguring
+* Add queuing of tasks on the messenger
+* Add syntax checker on the manifests
+* Move in collectd support
+* Remove master-slave protocol
