Removed messenger-get-current-nodes (deprecated binary) Added -y for terminating clouds to do it without prompt Added cloud method on plugin to correspond to the @parent Added after configure callbacks to cloud after configuration

--- a/TODO.textile
+++ b/TODO.textile
@@ -5,7 +5,7 @@
 # Add puppet/chef syntax checker
 # Place suitcase and dependencies files in ~/.poolparty/tmp-poolname/ instead of /tmp/
 # XMPP
-
+# Add delayed and immediate for plugins (before and after services)
 
 
 == TODO:
