* Changed options to dsl_options in chef_deploy plugin
* Added DirectoryMissing and RepoMissing Errors in git plugin
 Added repo as a dsl_method and name as a helper on top of repo
 Added tests to reflect

* Added DirectoryMissing and ReposMissing Error to rails_deploy plugin

* Added resource lookup methods on plugin/resource
 Added tests to reflect

--- a/TODO.textile
+++ b/TODO.textile
@@ -6,7 +6,7 @@
 # Place suitcase and dependencies files in ~/.poolparty/tmp-poolname/ instead of /tmp/
 # XMPP
 # Add delayed and immediate for plugins (before and after services)
-
+# Change exeception usage to error
 
 == TODO:
 * Add hot reload to haproxy while reconfiguring
