--- a/README.rdoc
+++ b/README.rdoc
@@ -162,6 +162,7 @@ Each resource is documented in the code and more documentation can be found at t
 == FEATURES/PROBLEMS:
 
 * Written in Ruby and Erlang (Internal node communication handled by <a href="https://github.com/auser/hermes/tree/master">Hermes</a>)
+* Thrift interface
 * Written from the ground up to be extensible with plugins
 * Easy git-style commands to communicate with your clouds
 * Much much more
