Added Gitter badge

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,7 @@
 = PoolParty
 
+{<img src="https://badges.gitter.im/Join%20Chat.svg" alt="Join the chat at https://gitter.im/auser/poolparty">}[https://gitter.im/auser/poolparty?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge&utm_content=badge]
+
 http://poolpartyrb.com
 
 == DESCRIPTION:
